# pseudopeople

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.rst  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  dfsdf  pyproject.toml  python_versions.json  setup.py  t  tox.ini  tq  update_readme.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: FEATURE_REQUEST.md  bug_report.yml  data_access_request.yml
.github/workflows/: build.yml  deploy.yml  notify.yml  update_readme.yml
docs/: Makefile  nitpick-exceptions
docs/source/: conf.py  glossary.rst  index.rst  installation.rst
docs/source/_static/: style.css
docs/source/api_reference/: config.rst  configuration.rst  index.rst  interface.rst
docs/source/api_reference/configuration/: index.rst
docs/source/api_reference/noising/: index.rst
docs/source/concepts/: configuration.rst  datasets.rst  forms.rst  index.rst  noise_functions.rst
docs/source/configuration/: index.rst
docs/source/datasets/: index.rst
docs/source/input_data/: index.rst
docs/source/noise/: column_noise.rst  index.rst  noise_functions.rst  row_noise.rst
docs/source/noise_functions/: index.rst
docs/source/simulated_populations/: index.rst
docs/source/tutorials/: configuration_example.yaml  configuring_noise.rst  getting_started.rst  index.rst
src/pseudo_people/: __about__.py  __init__.py  configuration.py  entities.py  entity_types.py  noise.py  noise_functions.py  utilities.py
src/pseudopeople/: __about__.py  __init__.py  column_getters.py  config.py  configuration.py  dataset.py  default_configuration.yaml  dtypes.py  entities.py  entity_types.py  exceptions.py  filter.py  interface.py  loader.py  noise.py  noise_entities.py  noise_functions.py  noise_level.py  noise_scaling.py  output_dtype_getters.py  schema_entities.py  test.ipynb  utilities.py
src/pseudopeople/configuration/: __init__.py  entities.py  generator.py  interface.py  noise_configuration.py  validator.py
src/pseudopeople/constants/: data_values.py  metadata.py  noise_type_metadata.py  paths.py
src/pseudopeople/data/: fake_names.py  incorrect_select_options.csv  nicknames.csv  ocr_errors.csv  phonetic_variations.csv  qwerty_errors.yaml
src/pseudopeople/data/sample_datasets/: metadata.parquet  metadata.yaml  metadata_proportions.csv
src/pseudopeople/data/sample_forms/: decennial_census_observer.hdf  household_survey_observer_acs.hdf  household_survey_observer_cps.hdf  social_security_observer.hdf  tax_1040_observer.hdf  tax_dependents_observer.hdf  wic_observer.hdf
tests/: conftest.py  constants.py  run_tests.sh  utilities.py
tests/integration/: conftest.py  test_dataset.py  test_interface.py  test_noise_forms.py  test_schema.py
tests/integration/release/: conftest.py  parallel_test_launcher.py  test_fixture_args.py  test_parallel_runs.py  test_release.py  test_runner.py  utilities.py
tests/integration/release/data/: census.csv  test.csv  (+5 more)
tests/release/: conftest.py  test_fixture_args.py  test_generate_data.py  test_release.py  test_runner.py
tests/unit/: conftest.py  test_column_noise.py  test_configuration.py  test_data_utils.py  test_interface.py  test_noise_form.py  test_row_noise.py  test_utils.py
tests/v_and_v_output/: .gitignore
(+15 files in other folders)
