[build-system]
requires = ["packaging", "setuptools"]

[tool.black]
line_length = 94

[tool.isort]
profile = "black"
known_third_party = [
    "layered_config_tree",
]

[tool.mypy]
# This is the global mypy configuration.
strict = true  # See all the enabled flags `mypy --help | grep -A 10 'Strict mode'`
disallow_any_unimported = false
implicit_reexport = true
exclude = [
    "build",
]
# ignore error codes (to allow for gradual typing)
# extract unique error codes thrown with `mypy . | grep -oP " [ \K[^\] ]+" | sort | uniq`
disable_error_code = [
    "assignment",
    "call-overload",
    "has-type",
    "import-untyped",
    "index",
    "list-item",
    "misc",
    "name-defined",
    "no-untyped-call",
    "no-untyped-def",
    "operator",
    "type-arg",
    "var-annotated",
]

# handle mypy errors when 3rd party packages are not typed.
[[tool.mypy.overrides]]
module = [
    # "scipy.*",
    # "sklearn.*",
]
ignore_missing_imports = true
